# AksharaNet

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  conanfile.txt
cmake/: FetchKenLM.cmake
src/: CMakeLists.txt  main.cpp
src/decoding/: CMakeLists.txt  decoder.cpp
src/decoding/include/aksharanet/decoding/: decoder.hpp
src/detection/: CMakeLists.txt  detector.cpp
src/detection/include/aksharanet/detection/: detector.hpp
src/language_model/: CMakeLists.txt  language_model.cpp
src/language_model/include/aksharanet/language_model/: language_model.hpp
src/pipeline/: CMakeLists.txt  pipeline.cpp
src/pipeline/include/aksharanet/pipeline/: pipeline.hpp
src/preprocessing/: CMakeLists.txt  preprocessor.cpp
src/preprocessing/include/aksharanet/preprocessing/: preprocessor.hpp
src/recognition/: CMakeLists.txt  recognizer.cpp
src/recognition/include/aksharanet/recognition/: recognizer.hpp
tests/: CMakeLists.txt  test_decoding.cpp  test_detection.cpp  test_language_model.cpp  test_pipeline.cpp  test_preprocessing.cpp  test_recognition.cpp  test_stub.cpp
